--- a/001.html
+++ b/001.html
@@ -26,6 +26,7 @@
 
   firstInputElement.addEventListener("focusout", function () {
     secondInputElement.focus();
+    secondInputElement.click();
   });
 
 </script>
