--- a/001.html
+++ b/001.html
@@ -27,6 +27,7 @@
             secondInputElement.focus();
             setTimeout(function () {
               secondInputElement.select();
+              secondInputElement.click();
             }, 100);
           }, 100);
         });
